
    where ``mount_id`` is magically retrieved from the way ``MyApp`` was
    mounted, you now write this::

       @MyApp.path(path='models/{id}', model=Model)
       def get_root(app, id):
           return Model(app.mount_id, id)

  * There was an ``request.mounted`` attribute. This attribute is now
    gone. Instead you can access the mounted application using
    ``request.app``.

  * Not a breaking change, but worth mentioning: the ``.child`` method
    on request takes the app class (or app name) as well as the
    parameters for the function decorated by the ``mount`` directive::

       request.child(MyApp, id='foo')

    As an alternative you can now instead pass an app *instance*
    (which of course takes the parameters specified in its
    ``__init__`` method)::

       request.child(MyApp(mount_id='foo'))

  Underneath, Morepath used to have a ``Mount`` class separate from
  the ``App`` classes you define. Since Morepath 0.4 application
  objects became classes, and it made sense to make their instances
  the same as the mounted application. This unification has now taken
  place. This simplifies the implementation of mounting considerably,
  while actually making available new features. This simplification
  helped to create the new ``defer_links`` directive.

- **Breaking change**. The arguments to the ``render`` function have
  changed. This is a function you can pass to a view directive.  The
  render function now takes a second argument, the request. You need
  to update your render functions to take this into account. This only
  affects code that supplies an explicit ``render`` function to the
  ``view``, ``json`` and ``html`` directives, and since not a lot of
  those functions exist, the impact is expected to be minimal.

- **Breaking change**. In certain circumstances it was useful to
  access the settings through an application instance using
  ``app.settings``. This does not work anymore; access the settings