@@ -10,9 +10,11 @@ class MountRegistry(object):
     def clear(self):
         self.mounted = {}
         self.named_mounted = {}
+        self.inherit_links = set()
 
     def register_mount(self, app, path, get_variables, converters, required,
-                       get_converters, mount_name, app_factory):
+                       get_converters, mount_name, inherit_links,
+                       app_factory):
         register_path(self, app, path, get_variables,
                       converters, required, get_converters, False,
                       app_factory)
@@ -20,6 +22,8 @@ class MountRegistry(object):
         self.mounted[app] = app_factory
         mount_name = mount_name or path
         self.named_mounted[mount_name] = app_factory
+        if inherit_links:
+            self.inherit_links.add(app)
 
     def register_defer_links(self, app, model, context_factory):
         def get_link(request, obj, mounted):
@@ -48,3 +52,5 @@ class MountRegistry(object):
 
         self.register(generic.view, [Request, model], get_view)
 
+    def is_inherit_links_mount(self, app):
+        return app.__class__ in self.inherit_links
